fix(color-picker): Optimize background overflow for color control bar

--- a/packages/web-vue/components/color-picker/style/token.less
+++ b/packages/web-vue/components/color-picker/style/token.less
@@ -51,6 +51,7 @@
 @color-control-bar-height: 14px;
 @color-control-bar-handle-size: @size-4;
 @color-control-bar-alpha-margin-top: @spacing-6;
+@color-control-bar-border-radius: 10px;
 
 @color-panel-input-margin-top: @spacing-6;
 @color-panel-input-group-margin-left: @spacing-6;
